// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guest Test Suite should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Guest />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <table>
        <tr>
          Adults
          <td>
            <button
              className="circle"
              name="adult"
              onClick={[Function]}
            >
              -
            </button>
            0
            <button
              className="circle"
              name="adult"
              onClick={[Function]}
            >
              +
            </button>
          </td>
        </tr>
        <tr>
          Children Ages 2-12
          <td>
            <button
              className="circle"
              name="children"
              onClick={[Function]}
            >
              -
            </button>
            0
            <button
              className="circle"
              name="children"
              onClick={[Function]}
            >
              +
            </button>
          </td>
        </tr>
        <tr>
          Infants Under 2
          <td>
            <button
              className="circle"
              name="infant"
              onClick={[Function]}
            >
              -
            </button>
            0
            <button
              className="circle"
              name="infant"
              onClick={[Function]}
            >
              +
            </button>
          </td>
        </tr>
      </table>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <tr>
            Adults
            <td>
              <button
                className="circle"
                name="adult"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="adult"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>,
          <tr>
            Children Ages 2-12
            <td>
              <button
                className="circle"
                name="children"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="children"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>,
          <tr>
            Infants Under 2
            <td>
              <button
                className="circle"
                name="infant"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="infant"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Adults",
              <td>
                <button
                  className="circle"
                  name="adult"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="adult"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Adults",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="circle"
                    name="adult"
                    onClick={[Function]}
                  >
                    -
                  </button>,
                  0,
                  <button
                    className="circle"
                    name="adult"
                    onClick={[Function]}
                  >
                    +
                  </button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "-",
                    "className": "circle",
                    "name": "adult",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "-",
                  "type": "button",
                },
                0,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "circle",
                    "name": "adult",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "button",
                },
              ],
              "type": "td",
            },
          ],
          "type": "tr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Children Ages 2-12",
              <td>
                <button
                  className="circle"
                  name="children"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="children"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Children Ages 2-12",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="circle"
                    name="children"
                    onClick={[Function]}
                  >
                    -
                  </button>,
                  0,
                  <button
                    className="circle"
                    name="children"
                    onClick={[Function]}
                  >
                    +
                  </button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "-",
                    "className": "circle",
                    "name": "children",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "-",
                  "type": "button",
                },
                0,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "circle",
                    "name": "children",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "button",
                },
              ],
              "type": "td",
            },
          ],
          "type": "tr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Infants Under 2",
              <td>
                <button
                  className="circle"
                  name="infant"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="infant"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Infants Under 2",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="circle"
                    name="infant"
                    onClick={[Function]}
                  >
                    -
                  </button>,
                  0,
                  <button
                    className="circle"
                    name="infant"
                    onClick={[Function]}
                  >
                    +
                  </button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "-",
                    "className": "circle",
                    "name": "infant",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "-",
                  "type": "button",
                },
                0,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "circle",
                    "name": "infant",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "button",
                },
              ],
              "type": "td",
            },
          ],
          "type": "tr",
        },
      ],
      "type": "table",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <table>
          <tr>
            Adults
            <td>
              <button
                className="circle"
                name="adult"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="adult"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>
          <tr>
            Children Ages 2-12
            <td>
              <button
                className="circle"
                name="children"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="children"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>
          <tr>
            Infants Under 2
            <td>
              <button
                className="circle"
                name="infant"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="infant"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>
        </table>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <tr>
              Adults
              <td>
                <button
                  className="circle"
                  name="adult"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="adult"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>
            </tr>,
            <tr>
              Children Ages 2-12
              <td>
                <button
                  className="circle"
                  name="children"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="children"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>
            </tr>,
            <tr>
              Infants Under 2
              <td>
                <button
                  className="circle"
                  name="infant"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="infant"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>
            </tr>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Adults",
                <td>
                  <button
                    className="circle"
                    name="adult"
                    onClick={[Function]}
                  >
                    -
                  </button>
                  0
                  <button
                    className="circle"
                    name="adult"
                    onClick={[Function]}
                  >
                    +
                  </button>
                </td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Adults",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="circle"
                      name="adult"
                      onClick={[Function]}
                    >
                      -
                    </button>,
                    0,
                    <button
                      className="circle"
                      name="adult"
                      onClick={[Function]}
                    >
                      +
                    </button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "-",
                      "className": "circle",
                      "name": "adult",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "-",
                    "type": "button",
                  },
                  0,
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "+",
                      "className": "circle",
                      "name": "adult",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "+",
                    "type": "button",
                  },
                ],
                "type": "td",
              },
            ],
            "type": "tr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Children Ages 2-12",
                <td>
                  <button
                    className="circle"
                    name="children"
                    onClick={[Function]}
                  >
                    -
                  </button>
                  0
                  <button
                    className="circle"
                    name="children"
                    onClick={[Function]}
                  >
                    +
                  </button>
                </td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Children Ages 2-12",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="circle"
                      name="children"
                      onClick={[Function]}
                    >
                      -
                    </button>,
                    0,
                    <button
                      className="circle"
                      name="children"
                      onClick={[Function]}
                    >
                      +
                    </button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "-",
                      "className": "circle",
                      "name": "children",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "-",
                    "type": "button",
                  },
                  0,
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "+",
                      "className": "circle",
                      "name": "children",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "+",
                    "type": "button",
                  },
                ],
                "type": "td",
              },
            ],
            "type": "tr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Infants Under 2",
                <td>
                  <button
                    className="circle"
                    name="infant"
                    onClick={[Function]}
                  >
                    -
                  </button>
                  0
                  <button
                    className="circle"
                    name="infant"
                    onClick={[Function]}
                  >
                    +
                  </button>
                </td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Infants Under 2",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="circle"
                      name="infant"
                      onClick={[Function]}
                    >
                      -
                    </button>,
                    0,
                    <button
                      className="circle"
                      name="infant"
                      onClick={[Function]}
                    >
                      +
                    </button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "-",
                      "className": "circle",
                      "name": "infant",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "-",
                    "type": "button",
                  },
                  0,
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "+",
                      "className": "circle",
                      "name": "infant",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "+",
                    "type": "button",
                  },
                ],
                "type": "td",
              },
            ],
            "type": "tr",
          },
        ],
        "type": "table",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Guest Test Suite should render each person category correctly with given props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Guest
    adult={5}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <table>
        <tr>
          Adults
          <td>
            <button
              className="circle"
              name="adult"
              onClick={[Function]}
            >
              -
            </button>
            0
            <button
              className="circle"
              name="adult"
              onClick={[Function]}
            >
              +
            </button>
          </td>
        </tr>
        <tr>
          Children Ages 2-12
          <td>
            <button
              className="circle"
              name="children"
              onClick={[Function]}
            >
              -
            </button>
            0
            <button
              className="circle"
              name="children"
              onClick={[Function]}
            >
              +
            </button>
          </td>
        </tr>
        <tr>
          Infants Under 2
          <td>
            <button
              className="circle"
              name="infant"
              onClick={[Function]}
            >
              -
            </button>
            0
            <button
              className="circle"
              name="infant"
              onClick={[Function]}
            >
              +
            </button>
          </td>
        </tr>
      </table>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <tr>
            Adults
            <td>
              <button
                className="circle"
                name="adult"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="adult"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>,
          <tr>
            Children Ages 2-12
            <td>
              <button
                className="circle"
                name="children"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="children"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>,
          <tr>
            Infants Under 2
            <td>
              <button
                className="circle"
                name="infant"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="infant"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Adults",
              <td>
                <button
                  className="circle"
                  name="adult"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="adult"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Adults",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="circle"
                    name="adult"
                    onClick={[Function]}
                  >
                    -
                  </button>,
                  0,
                  <button
                    className="circle"
                    name="adult"
                    onClick={[Function]}
                  >
                    +
                  </button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "-",
                    "className": "circle",
                    "name": "adult",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "-",
                  "type": "button",
                },
                0,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "circle",
                    "name": "adult",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "button",
                },
              ],
              "type": "td",
            },
          ],
          "type": "tr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Children Ages 2-12",
              <td>
                <button
                  className="circle"
                  name="children"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="children"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Children Ages 2-12",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="circle"
                    name="children"
                    onClick={[Function]}
                  >
                    -
                  </button>,
                  0,
                  <button
                    className="circle"
                    name="children"
                    onClick={[Function]}
                  >
                    +
                  </button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "-",
                    "className": "circle",
                    "name": "children",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "-",
                  "type": "button",
                },
                0,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "circle",
                    "name": "children",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "button",
                },
              ],
              "type": "td",
            },
          ],
          "type": "tr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Infants Under 2",
              <td>
                <button
                  className="circle"
                  name="infant"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="infant"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Infants Under 2",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="circle"
                    name="infant"
                    onClick={[Function]}
                  >
                    -
                  </button>,
                  0,
                  <button
                    className="circle"
                    name="infant"
                    onClick={[Function]}
                  >
                    +
                  </button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "-",
                    "className": "circle",
                    "name": "infant",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "-",
                  "type": "button",
                },
                0,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "circle",
                    "name": "infant",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "button",
                },
              ],
              "type": "td",
            },
          ],
          "type": "tr",
        },
      ],
      "type": "table",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <table>
          <tr>
            Adults
            <td>
              <button
                className="circle"
                name="adult"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="adult"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>
          <tr>
            Children Ages 2-12
            <td>
              <button
                className="circle"
                name="children"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="children"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>
          <tr>
            Infants Under 2
            <td>
              <button
                className="circle"
                name="infant"
                onClick={[Function]}
              >
                -
              </button>
              0
              <button
                className="circle"
                name="infant"
                onClick={[Function]}
              >
                +
              </button>
            </td>
          </tr>
        </table>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <tr>
              Adults
              <td>
                <button
                  className="circle"
                  name="adult"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="adult"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>
            </tr>,
            <tr>
              Children Ages 2-12
              <td>
                <button
                  className="circle"
                  name="children"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="children"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>
            </tr>,
            <tr>
              Infants Under 2
              <td>
                <button
                  className="circle"
                  name="infant"
                  onClick={[Function]}
                >
                  -
                </button>
                0
                <button
                  className="circle"
                  name="infant"
                  onClick={[Function]}
                >
                  +
                </button>
              </td>
            </tr>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Adults",
                <td>
                  <button
                    className="circle"
                    name="adult"
                    onClick={[Function]}
                  >
                    -
                  </button>
                  0
                  <button
                    className="circle"
                    name="adult"
                    onClick={[Function]}
                  >
                    +
                  </button>
                </td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Adults",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="circle"
                      name="adult"
                      onClick={[Function]}
                    >
                      -
                    </button>,
                    0,
                    <button
                      className="circle"
                      name="adult"
                      onClick={[Function]}
                    >
                      +
                    </button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "-",
                      "className": "circle",
                      "name": "adult",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "-",
                    "type": "button",
                  },
                  0,
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "+",
                      "className": "circle",
                      "name": "adult",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "+",
                    "type": "button",
                  },
                ],
                "type": "td",
              },
            ],
            "type": "tr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Children Ages 2-12",
                <td>
                  <button
                    className="circle"
                    name="children"
                    onClick={[Function]}
                  >
                    -
                  </button>
                  0
                  <button
                    className="circle"
                    name="children"
                    onClick={[Function]}
                  >
                    +
                  </button>
                </td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Children Ages 2-12",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="circle"
                      name="children"
                      onClick={[Function]}
                    >
                      -
                    </button>,
                    0,
                    <button
                      className="circle"
                      name="children"
                      onClick={[Function]}
                    >
                      +
                    </button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "-",
                      "className": "circle",
                      "name": "children",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "-",
                    "type": "button",
                  },
                  0,
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "+",
                      "className": "circle",
                      "name": "children",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "+",
                    "type": "button",
                  },
                ],
                "type": "td",
              },
            ],
            "type": "tr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Infants Under 2",
                <td>
                  <button
                    className="circle"
                    name="infant"
                    onClick={[Function]}
                  >
                    -
                  </button>
                  0
                  <button
                    className="circle"
                    name="infant"
                    onClick={[Function]}
                  >
                    +
                  </button>
                </td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Infants Under 2",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="circle"
                      name="infant"
                      onClick={[Function]}
                    >
                      -
                    </button>,
                    0,
                    <button
                      className="circle"
                      name="infant"
                      onClick={[Function]}
                    >
                      +
                    </button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "-",
                      "className": "circle",
                      "name": "infant",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "-",
                    "type": "button",
                  },
                  0,
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "+",
                      "className": "circle",
                      "name": "infant",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "+",
                    "type": "button",
                  },
                ],
                "type": "td",
              },
            ],
            "type": "tr",
          },
        ],
        "type": "table",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
